--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,7 @@ dependencies {
     compile rootProject.ext.dependencies["rxjava"]
     compile rootProject.ext.dependencies["rxandroid"]
     compile rootProject.ext.dependencies["rxbinding"]
+    compile rootProject.ext.dependencies["eventbus"]
 
     compile rootProject.ext.dependencies["butterknife"]
     compile rootProject.ext.dependencies["dagger"]
