--- a/config.gradle
+++ b/config.gradle
@@ -30,6 +30,7 @@ ext {
             "adapter-rxjava"        : "com.squareup.retrofit2:adapter-rxjava:${retrofitVersion}",
             "logging-interceptor"   : "com.squareup.okhttp3:logging-interceptor:3.3.1",
             "gson"                  : "com.google.code.gson:gson:2.6.2",
+            "eventbus"              : "org.greenrobot:eventbus:3.0.0",
             "timber"                : "com.jakewharton.timber:timber:4.1.2",
             "butterknife"           : "com.jakewharton:butterknife:8.1.0",
             "rxjava"                : "io.reactivex:rxjava:${rxVersion}",
