--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,10 +31,13 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     compile rootProject.ext.dependencies["appcompat-v7"]
+    compile rootProject.ext.dependencies["cardView"]
+    compile rootProject.ext.dependencies["recyclerView"]
     compile rootProject.ext.dependencies["retrofit"]
     compile rootProject.ext.dependencies["converter-gson"]
     compile rootProject.ext.dependencies["adapter-rxjava"]
     compile rootProject.ext.dependencies["logging-interceptor"]
+    compile rootProject.ext.dependencies["glide"]
 
     compile rootProject.ext.dependencies["rxjava"]
     compile rootProject.ext.dependencies["rxandroid"]
