--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,7 +27,7 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile rootProject.ext.dependencies["appcompat-v7"]
     compile rootProject.ext.dependencies["cardView"]
@@ -37,15 +37,16 @@ dependencies {
     compile rootProject.ext.dependencies["adapter-rxjava"]
     compile rootProject.ext.dependencies["logging-interceptor"]
     compile rootProject.ext.dependencies["glide"]
-
     compile rootProject.ext.dependencies["rxjava"]
     compile rootProject.ext.dependencies["rxandroid"]
     compile rootProject.ext.dependencies["rxbinding"]
+    compile rootProject.ext.dependencies["rxbinding"]
+    compile rootProject.ext.dependencies["rx-preferences"]
     compile rootProject.ext.dependencies["eventbus"]
-
     compile rootProject.ext.dependencies["butterknife"]
+    apt rootProject.ext.dependencies["butterknife-compiler"]
     compile rootProject.ext.dependencies["dagger"]
     apt rootProject.ext.dependencies["dagger-compiler"]
-
     debugCompile rootProject.ext.dependencies["timber"]
+    compile project(':lite-orm-1.9.1')
 }
