--- a/config.gradle
+++ b/config.gradle
@@ -41,7 +41,8 @@ ext {
             "rxbinding"             : "com.jakewharton.rxbinding:rxbinding:${rxBindingVersion}",
             "rxbinding-design"      : "com.jakewharton.rxbinding:rxbinding-design:${rxBindingVersion}",
             "rxbinding-appcompat-v7": "com.jakewharton.rxbinding:rxbinding-appcompat-v7:${rxBindingVersion}",
-            "rx-preferences"          : "com.f2prateek.rx.preferences:rx-preferences:1.0.2",
+            "rx-preferences"        : "com.f2prateek.rx.preferences:rx-preferences:1.0.2",
+            "rx-lifecycle"          : "com.trello:rxlifecycle:0.6.1",
             "dagger"                : "com.google.dagger:dagger:${daggerVersion}",
             "dagger-compiler"       : "com.google.dagger:dagger-compiler:${daggerVersion}",
             "glide"                 : "com.github.bumptech.glide:glide:3.7.0",
