Add stetho to fix bugs

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,4 +54,9 @@ dependencies {
         transitive = true;
     }
 
+    debugCompile rootProject.ext.dependencies["stetho"]
+    debugCompile rootProject.ext.dependencies["stetho-okhttp3"]
+
+
+
 }
