--- a/config.gradle
+++ b/config.gradle
@@ -46,6 +46,9 @@ ext {
             "dagger"                : "com.google.dagger:dagger:${daggerVersion}",
             "dagger-compiler"       : "com.google.dagger:dagger-compiler:${daggerVersion}",
             "glide"                 : "com.github.bumptech.glide:glide:3.7.0",
+            "stetho"                : "com.facebook.stetho:stetho:1.3.1",
+            "stetho-okhttp3"        : "com.facebook.stetho:stetho-okhttp3:1.3.1",
+
     ]
 
 
