Add smooth progress bar dependency

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,6 +62,9 @@ dependencies {
     compile rootProject.ext.dependencies["stetho"]
     compile rootProject.ext.dependencies["stetho-okhttp3"]
 
+    compile rootProject.ext.dependencies["smooth-progress-bar"]
+
+
 
 
 }
