--- a/config.gradle
+++ b/config.gradle
@@ -23,34 +23,35 @@ ext {
     butterknifeVersion = '8.2.1'
 
     dependencies = [
-            "appcompat-v7"          : "com.android.support:appcompat-v7:${supportVersion}",
-            "support-design"        : "com.android.support:design:${supportVersion}",
-            "recyclerView"          : "com.android.support:recyclerview-v7:${supportVersion}",
-            "cardView"              : "com.android.support:cardview-v7:${supportVersion}",
-            "retrofit"              : "com.squareup.retrofit2:retrofit:${retrofitVersion}",
-            "converter-gson"        : "com.squareup.retrofit2:converter-gson:${retrofitVersion}",
-            "adapter-rxjava"        : "com.squareup.retrofit2:adapter-rxjava:${retrofitVersion}",
-            "logging-interceptor"   : "com.squareup.okhttp3:logging-interceptor:3.3.1",
-            "gson"                  : "com.google.code.gson:gson:2.6.2",
-            "eventbus"              : "org.greenrobot:eventbus:3.0.0",
-            "timber"                : "com.jakewharton.timber:timber:4.1.2",
-            "butterknife"           : "com.jakewharton:butterknife:${butterknifeVersion}",
-            "butterknife-compiler"  : "com.jakewharton:butterknife-compiler:${butterknifeVersion}",
-            "rxjava"                : "io.reactivex:rxjava:${rxVersion}",
-            "rxandroid"             : "io.reactivex:rxandroid:1.2.0",
-            "rxbinding"             : "com.jakewharton.rxbinding:rxbinding:${rxBindingVersion}",
-            "rxbinding-design"      : "com.jakewharton.rxbinding:rxbinding-design:${rxBindingVersion}",
-            "rxbinding-appcompat-v7": "com.jakewharton.rxbinding:rxbinding-appcompat-v7:${rxBindingVersion}",
-            "rx-preferences"        : "com.f2prateek.rx.preferences:rx-preferences:1.0.2",
-            "rx-lifecycle"          : "com.trello:rxlifecycle:0.6.1",
-            "dagger"                : "com.google.dagger:dagger:${daggerVersion}",
-            "dagger-compiler"       : "com.google.dagger:dagger-compiler:${daggerVersion}",
-            "glide"                 : "com.github.bumptech.glide:glide:3.7.0",
-            "stetho"                : "com.facebook.stetho:stetho:1.3.1",
-            "stetho-okhttp3"        : "com.facebook.stetho:stetho-okhttp3:1.3.1",
+            "appcompat-v7"             : "com.android.support:appcompat-v7:${supportVersion}",
+            "support-design"           : "com.android.support:design:${supportVersion}",
+            "recyclerView"             : "com.android.support:recyclerview-v7:${supportVersion}",
+            "cardView"                 : "com.android.support:cardview-v7:${supportVersion}",
+            "retrofit"                 : "com.squareup.retrofit2:retrofit:${retrofitVersion}",
+            "converter-gson"           : "com.squareup.retrofit2:converter-gson:${retrofitVersion}",
+            "adapter-rxjava"           : "com.squareup.retrofit2:adapter-rxjava:${retrofitVersion}",
+            "logging-interceptor"      : "com.squareup.okhttp3:logging-interceptor:3.3.1",
+            "gson"                     : "com.google.code.gson:gson:2.6.2",
+            "eventbus"                 : "org.greenrobot:eventbus:3.0.0",
+            "timber"                   : "com.jakewharton.timber:timber:4.1.2",
+            "butterknife"              : "com.jakewharton:butterknife:${butterknifeVersion}",
+            "butterknife-compiler"     : "com.jakewharton:butterknife-compiler:${butterknifeVersion}",
+            "rxjava"                   : "io.reactivex:rxjava:${rxVersion}",
+            "rxandroid"                : "io.reactivex:rxandroid:1.2.0",
+            "rxbinding"                : "com.jakewharton.rxbinding:rxbinding:${rxBindingVersion}",
+            "rxbinding-design"         : "com.jakewharton.rxbinding:rxbinding-design:${rxBindingVersion}",
+            "rxbinding-appcompat-v7"   : "com.jakewharton.rxbinding:rxbinding-appcompat-v7:${rxBindingVersion}",
+            "rx-preferences"           : "com.f2prateek.rx.preferences:rx-preferences:1.0.2",
+            "rx-lifecycle"             : "com.trello:rxlifecycle:0.6.1",
+            "dagger"                   : "com.google.dagger:dagger:${daggerVersion}",
+            "dagger-compiler"          : "com.google.dagger:dagger-compiler:${daggerVersion}",
+            "glide"                    : "com.github.bumptech.glide:glide:3.7.0",
+            "glide-okhttp3-integration": "com.github.bumptech.glide:okhttp3-integration:1.4.0@jar",
+            "stetho"                   : "com.facebook.stetho:stetho:1.3.1",
+            "stetho-okhttp3"           : "com.facebook.stetho:stetho-okhttp3:1.3.1",
 
 //            widgets
-            "smooth-progress-bar"   : "com.github.castorflex.smoothprogressbar:library:1.0.0",
+            "smooth-progress-bar"      : "com.github.castorflex.smoothprogressbar:library:1.0.0",
     ]
 
 
