--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,11 @@
         android:largeHeap="true"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
+       <!-- <meta-data
+            android:name="com.sinyuk.yuk.utils.glide.okhttp3.SinyukGlideModule"
+            android:value="GlideModule"/>-->
+
         <activity android:name=".ShotsListDemo">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
