--- a/config.gradle
+++ b/config.gradle
@@ -27,6 +27,7 @@ ext {
             "support-design"           : "com.android.support:design:${supportVersion}",
             "recyclerView"             : "com.android.support:recyclerview-v7:${supportVersion}",
             "cardView"                 : "com.android.support:cardview-v7:${supportVersion}",
+            "palette"                  : "com.android.support:palette-v7:${supportVersion}",
             "retrofit"                 : "com.squareup.retrofit2:retrofit:${retrofitVersion}",
             "converter-gson"           : "com.squareup.retrofit2:converter-gson:${retrofitVersion}",
             "adapter-rxjava"           : "com.squareup.retrofit2:adapter-rxjava:${retrofitVersion}",
