--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,4 +59,8 @@ dependencies {
     compile rootProject.ext.dependencies["stetho-okhttp3"]
     compile rootProject.ext.dependencies["smooth-progress-bar"]
     compile project(':yukloadinglayout')
+
+    debugCompile rootProject.ext.dependencies["leakcanary"]
+    releaseCompile rootProject.ext.dependencies["leakcanary-no-op"]
+    testCompile rootProject.ext.dependencies["leakcanary-no-op"]
 }
