--- a/config.gradle
+++ b/config.gradle
@@ -50,7 +50,8 @@ ext {
             "glide-okhttp3-integration": "com.github.bumptech.glide:okhttp3-integration:1.4.0@jar",
             "stetho"                   : "com.facebook.stetho:stetho:1.3.1",
             "stetho-okhttp3"           : "com.facebook.stetho:stetho-okhttp3:1.3.1",
-
+            "leakcanary"               : "com.squareup.leakcanary:leakcanary-android:1.4-beta2",
+            "leakcanary-no-op"         : "com.squareup.leakcanary:leakcanary-android-no-op:1.4-beta2",
 //            widgets
             "smooth-progress-bar"      : "com.github.castorflex.smoothprogressbar:library:1.0.0",
     ]
