--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,12 @@
             android:value="GlideModule"/>
 
         <activity android:name=".ShotsListDemo">
+
+        </activity>
+
+        <activity
+            android:name=".ui.splash.SplashActivity"
+            android:launchMode="singleTop">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
