--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,13 +21,16 @@
             android:name="com.sinyuk.yuk.utils.glide.okhttp3.SinyukGlideModule"
             android:value="GlideModule"/>
 
-        <activity android:name=".ShotsListDemo">
+        <activity
+            android:name=".ShotsListDemo"
+            android:theme="@style/Home">
 
         </activity>
 
         <activity
             android:name=".ui.splash.SplashActivity"
-            android:launchMode="singleTop">
+            android:launchMode="singleTop"
+            android:theme="@style/Splash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
