Add guillotine menu

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,9 +60,8 @@ dependencies {
     compile rootProject.ext.dependencies["smooth-progress-bar"]
     compile project(':yukloadinglayout')
     compile rootProject.ext.dependencies["rebound"]
-
-
     debugCompile rootProject.ext.dependencies["leakcanary"]
     releaseCompile rootProject.ext.dependencies["leakcanary-no-op"]
     testCompile rootProject.ext.dependencies["leakcanary-no-op"]
+    compile project(':guillotinemenu')
 }
