--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,11 +11,12 @@
     <application
         android:name=".App"
         android:allowBackup="true"
+        android:hardwareAccelerated="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:largeHeap="true"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/Yuk">
 
         <meta-data
             android:name="com.sinyuk.yuk.utils.glide.okhttp3.SinyukGlideModule"
@@ -23,14 +24,14 @@
 
         <activity
             android:name=".ShotsListDemo"
-            android:theme="@style/Home">
+            android:theme="@style/Yuk.Home">
 
         </activity>
 
         <activity
             android:name=".ui.splash.SplashActivity"
             android:launchMode="singleTop"
-            android:theme="@style/Splash">
+            android:theme="@style/Yuk.Splash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
