--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,6 +41,8 @@
         </activity>
 
         <activity android:name=".ui.detail.DetailActivity"/>
+
+        <activity android:name=".ui.login.DribbbleLoginActivity"/>
     </application>
 
 </manifest>
