Update detail layout

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,7 +45,7 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".ui.detail.DetailActivity"/>
+        <activity android:name=".ui.detail.DetailActivity" android:theme="@style/Yuk.Detail"/>
 
         <activity android:name=".ui.login.DribbbleLoginActivity">
 
