--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,7 +58,7 @@ dependencies {
     compile rootProject.ext.dependencies["rxjava"]
     compile rootProject.ext.dependencies["rxandroid"]
     compile rootProject.ext.dependencies["rxbinding"]
-    compile rootProject.ext.dependencies["rxbinding"]
+    compile rootProject.ext.dependencies["rxbinding-design"]
     compile rootProject.ext.dependencies["rx-preferences"]
     compile rootProject.ext.dependencies["rx-lifecycle"]
     compile rootProject.ext.dependencies["eventbus"]
