--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,4 +77,5 @@ dependencies {
     testCompile rootProject.ext.dependencies["leakcanary-no-op"]
     compile project(':guillotinemenu')
     compile project(':bypass')
+    compile 'pl.droidsonroids.gif:android-gif-drawable:1.2.1'
 }
